# csvtag

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
src/csvtag/: caller.py  combiner.py  inversion_annotator.py  inversion_handler.py  microhomology_handler.py  microhomology_trimmer.py  overlap_handler.py  overlap_remover.py  revcomp.py  sam_handler.py  split.py  spliter.py  splitter.py  to_html.py  to_sequence.py
src/template/: html.py
tests/: __init__.py
tests/data/: four_alignments.sam  inv_generation.sh  inversion_map_ont.sam  inversion_splice.sam  inversion_splice_simulated.sam  inversion_sr_simulated.sam  one_alignment.sam  three_alignments_witn_inv.sam  two_alignments.sam
tests/src/: test_caller.py  test_combiner.py  test_microhomology_handler.py  test_microhomology_trimmer.py  test_overlap_handler.py  test_overlap_remover.py  test_revcomp.py  test_sam_handler.py  test_split.py  test_splitter.py  test_to_sequence.py
